
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TableRow android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/housePriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/housePrice" />

        <EditText
            android:id="@+id/housePriceInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/doubleZero"/>

    </TableRow>

    <TableRow android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/downPaymentAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downPaymentAmount" />

        <EditText
            android:id="@+id/downPaymentAmountInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/doubleZero" />

    </TableRow>

    <TableRow android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/annualInterestRateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annualInterestRate" />

        <EditText
            android:id="@+id/annualInterestRateInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/doubleZero" />
    </TableRow>

    <TableRow android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/propertyTaxRateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/propertyTaxRate" />

        <EditText
            android:id="@+id/propertyTaxRateInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/doubleZero" />
    </TableRow>

    <TableRow android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lengthOfTermsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lengthOfTerms" />

        <EditText
            android:id="@+id/lengthOfTermsInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/intZero" />
    </TableRow>

    <TableRow android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/monthlyPaymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthlyPayment" />

        <EditText
            android:id="@+id/monthlyPaymentInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:longClickable="false"
            android:text="@string/doubleZero"/>
    </TableRow>

    <TableRow android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/totalPaymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalPayment" />

        <EditText
            android:id="@+id/totalPaymentInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:longClickable="false"
            android:text="@string/doubleZero"/>
    </TableRow>

    <TableRow android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/totalPropertyTaxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalPropertyTax" />

        <EditText
            android:id="@+id/totalPropertyTaxInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:longClickable="false"
            android:text="@string/doubleZero"/>
    </TableRow>

    <TableRow android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/payOffDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payOffDate" />

        <EditText
            android:id="@+id/payOffDateInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:editable="false"
            android:focusable="false"
            android:longClickable="false"
            android:text="@string/blank"/>
    </TableRow>

    <TableRow android:id="@+id/tableRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="@dimen/tagButtonWidth"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />


    </TableRow>



</TableLayout>
