<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/input_layout"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_weight="1"
    android:gravity="center"
    android:background="@color/inputBackground"
    android:padding="10dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/housePrice"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@android:color/white"
            android:id="@+id/housePriceInputField"
            android:layout_gravity="end"


            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="$"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/downPaymentAmount"
            android:id="@+id/textView_down"
            android:layout_alignBottom="@+id/textView_dwn"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@android:color/white"
            android:id="@+id/downPaymentAmountInputField"
            android:layout_gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView_down" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="$"
            android:id="@+id/textView_dwn"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/annualInterestRate"
            android:id="@+id/textView_apr"
            android:layout_alignBottom="@+id/textViewapr"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@android:color/white"
            android:id="@+id/annualInterestRateInputField"
            android:layout_gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView_apr" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="%"
            android:id="@+id/textViewapr"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lengthOfTerms"
            android:id="@+id/textView_terms"
            android:layout_alignBottom="@+id/textViewterms"
            android:layout_alignParentStart="true" />

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="numberSigned"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:textColorHint="@android:color/white"-->
            <!--android:id="@+id/lengthOfTermsInputField"-->
            <!--android:layout_gravity="end"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_toEndOf="@+id/textView_terms" />-->

        <Spinner
            android:id="@+id/terms_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/terms_array"
            android:layout_gravity="right"
            android:layout_toEndOf="@+id/textView_terms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Yrs"
            android:id="@+id/textViewterms"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/propertyTaxRate"
            android:id="@+id/textView_tax"
            android:layout_alignBottom="@+id/textViewTax"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@android:color/white"
            android:id="@+id/propertyTaxRateInputField"
            android:layout_gravity="end"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView_tax" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="%"
            android:id="@+id/textViewTax"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|fill_horizontal"
        android:layout_weight="1"
        android:layout_gravity="bottom|center_horizontal"

        >
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/button_calculate"
            android:background="@android:color/holo_blue_dark"/>

    </LinearLayout>
</LinearLayout>
